--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ before_install: |
 install: |
   sudo apt-get install crystal
 
+before_script:
+  - ./script/setup-test-db.sh
+
 script:
   - crystal spec
