Revert "[travis] add osx"
This reverts commit 2fb4e55257a3a5ae03022c220fe6eb68f2ff2a4e.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,7 @@
-os:
-  - linux
-  - osx
-
 language: c
 before_install: |
-  which apt-get && curl http://dist.crystal-lang.org/apt/setup.sh | sudo bash
-  which apt-get && sudo apt-get -q update
-  which brew && brew tap manastech/crystal
-  which brew && brew install crystal
+  curl http://dist.crystal-lang.org/apt/setup.sh | sudo bash
+  sudo apt-get -q update
 
 install: |
   sudo apt-get install crystal
