--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,2 @@
-language: c
-before_install: |
-  curl http://dist.crystal-lang.org/apt/setup.sh | sudo bash
-  sudo apt-get -q update
-
-install: |
-  sudo apt-get install crystal
-
-before_script:
-  - ./script/setup-test-db.sh
-
-script:
-  - crystal spec
+language: crystal
+before_script: script/setup-test-db.sh
